# robot_cho

./: .gitignore  docker-compose.yml  dog_forward.py  tai lieu lidar.docx  thuvien.py
2_Control/: 9.dog_Ctrl.ipynb  Dong_hoc_nghich_robot.docx  ~$ng_hoc_nghich_robot.docx
backend/: db.sqlite3  requirements.txt
backend/authapp/: views.py
backend/backend/: asgi.py  settings.py  urls.py
backend/control/: consumers.py  routing.py  urls.py  views.py
backend/control/services/: robot_client_adapter.py  ros.py
dogzilla_server/: app.py  robot.py
dogzilla_server/routes/: control.py  status.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/connection/: page.tsx
frontend/app/control/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/hooks/: useMouselookWS.ts
frontend/app/lib/: robotApi.ts
frontend/app/login/: page.tsx
frontend/app/page/: Page_remotr.tsx
frontend/app/page/control/: Page_remotr.tsx
frontend/app/page/dashboard/: layout.tsx  page.tsx
frontend/app/register/: page.tsx
frontend/components/: ConnectionCard.tsx  HalfCircleJoystick.tsx  MouselookPad.tsx  Sidebar.tsx  Topbar.tsx  header_control.tsx
frontend/components/control/: FPVView.tsx  RemoteView.tsx
mi/: dog_tree.gv
mi/src/pkg_helloworld_cpp/: package.xml
mi/src/pkg_helloworld_py/: package.xml  setup.py
mi/src/pkg_topic/: package.xml  setup.py
mi/src/yahboom_dog_description/: CMakeLists.txt  package.xml  readme.txt
mi/src/yahboom_dog_description/config/: controllers.yaml  ros2_controllers.yaml
mi/src/yahboom_dog_description/launch/: bringup.launch.py  description.launch.py  display.launch.py  gazebo.launch.py
mi/src/yahboom_dog_description/scripts/: xacro_watcher.py
mi/src/yahboom_dog_description/urdf/: yahboom_dog.urdf.xacro  yahboom_dog.urdf.xacro.bak
robot_client/: camera.py  config.py  control.py  main.py
(+3 files in other folders)
